Overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@
 .title-block {
     width: 60%;
     height: 35%;
-    overflow: auto;
     margin: auto;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
